--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "primevue": "^4.3.9",
     "vue": "^3.5.21",
     "vue-i18n": "^11.1.12",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "axios": "^1.12.2",
+    "pinia": "^3.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
